[package]
name = "cargo-arceos"
version = "0.1.0"
edition = "2024"
description = "Compile an ArceOS app with ease"

[dependencies]
axconfig-gen = "0.1"
cargo-options = "0.7"
cargo_metadata = "0.19"
clap = { version = "4", features = ["derive", "env"] }
console = "0.15.11"
heck = "0.5.0"
log = { version = "0.4", features = ["std"] }
strum = { version = "0.27", features = ["derive"] }
toml_edit = "0.22"
